samples/_failures_safe/1761435641_15c207_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34795cc7.c: In function ‘main’:
./samples/SAFE/__tmp_34795cc7.c:152:25: error: missing terminating " character
  152 |         fprintf(stderr, "Decomp
      |                         ^~~~~~~
./samples/SAFE/__tmp_34795cc7.c:152:9: error: expected expression at end of input
  152 |         fprintf(stderr, "Decomp
      |         ^~~~~~~
./samples/SAFE/__tmp_34795cc7.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_34795cc7.c:152:9: error: expected declaration or statement at end of input
